# DiwaAi

./: .dockerignore  .env.example  .gitignore  HANDOFF.md  README.md  SeviAI_Project_Briefing.pptx  ais_relay_server.py  ais_stub_server.py  app.py  hr_stub_server.py  hybrid_chatbot.py  intents_db.py  render.yaml  sonar-project.properties  test_agentic_workflow.py  test_campus_context.py  test_campus_directory.py  test_conversation_recap.py  test_input_clamps.py  test_intent_grounding.py  test_moderation_controls.py  test_place_resolver.py  test_response_blocks.py  test_response_selection.py  test_retrieval_tiers.py  test_safety_gate.py  test_slot_metrics.py
.audit_backup_2026-05-09/: CvSU_classifier.pkl
api/: agentic_loop.py  ais_mcp.py  anti_patterns.py  app.py  auth_ais.py  campus_context.py  campus_directory.py  campus_places.py  charter_rag.py  college_programs.py  connectors_mcp.py  hr_mcp.py  hybrid_chatbot.py  intent_grounding.py  intent_retrieval.py  joint_nlu.py  logger.py  model_registry.py  nlu_engine.py  pii.py  response_blocks.py  safety.py  site_rag.py  slot_metrics.py  slot_schema.py  smalltalk.py  topic_recommender.py
connectors_mcp/: .env.example  README.md  pyproject.toml
connectors_mcp/src/diwa_connectors/: __init__.py  __main__.py  config.py  http.py  registry.py  server.py
connectors_mcp/src/diwa_connectors/groups/: courses.py  dts.py  orps.py
connectors_mcp/tests/: test_config.py  test_courses.py  test_dts.py  test_orps.py  test_registry.py
data/: cavsu_intents.backup_before_v2.json  cavsu_intents.db  cavsu_intents.db-shm  (+8 more)
docs/: URS.md  (+16 more)
(+94 files in other folders)
